testsuite/tests/properties/invalid_eq/correct_entity/test.lkt
from common import FooNode

class Example: FooNode {
    @exported fun prop(): Bool = self.parent == self.as[FooNode]
}
